# EG-Overlay

./: .gitattributes  .gitignore  LICENSE  README.md  conf.py  index.rst  lua-modindex.rst  meson.build  notes.txt  overlay-eventindex.rst
.github/workflows/: build-release.yml  deploy-documentation.yml
contrib/glad/include/glad/: gl.h
data/gw2/: data.db
docs/: conf.py  configuration.rst  faq.rst  install.rst  requirements.txt  running.rst
docs/_ext/eg_overlay/: __init__.py  directives.py  domain.py  luadomain.py  parsers.py
docs/_include/: overlayevents.rst  ui_element_color.rst  ui_element_eventhandlers.rst  uielement.rst
docs/_static/css/: egoverlay.css
docs/development/: compiling.rst  lua-api.rst  lua-threads.rst
scripts/: build-dev-docs.ps1  build-docs.ps1  build-release.ps1  build_docs.ps1  clean-docs.ps1  clean_docs.ps1  debug.ps1  generate_lua_gw2_static.py  generate_release.ps1  meson-setup.ps1  run.ps1  start-windbgx.ps1  updatestaticdb.lua
src/: app.c  app.h  dcompwrap.cpp  dcompwrap.h  dx.c  dx.h  dx.rs  eg-overlay.h.in  ft.rs  githash.h.in  githash.rs.in  gl.c  gl.h  hashstr.c  input.rs  lamath.c  lamath.h  lamath.rs  logging.rs  lua-dx.c  lua-dx.h  lua-gl.c  lua-gl.h  lua-json.c  lua-json.h  lua-manager.c  lua-manager.h  lua-sqlite.c  lua-sqlite.h  lua.rs  lua_json.rs  lua_manager.rs  lua_path.rs  lua_shell.rs  lua_sqlite3.rs  main.c  main.rs  meson.build  ml.rs  mumble-link.c  (+18 more)
src/dx/: lua.rs
src/fonts/: meson.build
src/logging/: console-sink.c  console-sink.h  dbg-sink.c  dbg-sink.h  event-sink.c  event-sink.h  file-sink.c  file-sink.h  helpers.c  helpers.h  logger.c  logger.h  meson.build  sink.c  sink.h  sinks.rs  stderr-sink.c  stderr-sink.h
src/lua/: autoload.lua  console.lua  copy-pasta.lua  db.lua  dbg.lua  dialogs.lua  logger.lua  main-menu.lua  map-buddy.lua  meson.build  mumble-link-events.lua  mumble-link-info.lua  overlay-menu.lua  overlay-stats.lua  psna-tracker.lua  ui-extra.lua  ui-helpers.lua  utils.lua  xml-cleaner.lua
src/lua/gw2/: api.lua  data.lua  init.lua  meson.build  static.lua
src/lua/markers/: category-manager.lua  converters.lua  data.lua  init.lua  loaders.lua  manager.lua  markerpacks.rst  markers.rst  menu.lua  meson.build  package.lua  settings-win.lua  settings.lua  taco2db.lua
src/ml/: lua.rs
src/overlay/: lua.rs
src/res/: eg-overlay-icon.xcf  eg-overlay-texture.xcf  icons.h  icons.rc  meson.build  version.rc
src/settings/: lua.rs
src/shaders/: 3dcommon.glsl  3dcommon.hlsl  font-quad.hlsl  font-quad.pixel.hlsl  font-quad.ps.hlsl  font-quad.root.hlsl  font-quad.vert.hlsl  font-quad.vs.hlsl  image.frag  image.hlsl  image.ps.hlsl  image.vert  image.vs.hlsl  meson.build  polyline.frag  polyline.vert  rect.frag  rect.hlsl  rect.pixel.hlsl  rect.ps.hlsl  rect.vert  rect.vert.hlsl  rect.vs.hlsl  root-sig.hlsl  sprite-array.frag  sprite-array.vert  sprite-collection.frag  sprite-collection.vert  sprite-list.hlsl  sprite-list.pixel.hlsl  sprite-list.ps.hlsl  sprite-list.vs.hlsl  text-quad.frag  text-quad.vert  trail.frag  trail.hlsl  trail.pixel.hlsl  trail.ps.hlsl  trail.vert  trail.vert.hlsl  (+1 more)
src/textures/: meson.build
src/ui/: box.c  box.h  button.c  button.h  button.rs  color.h  entry.rs  font.c  font.h  font.rs  grid.c  grid.h  grid.rs  image.c  image.h  lua.rs  menu.c  menu.h  menu.rs  polyline.c  polyline.h  rect.c  rect.h  rect.rs  scrollview.c  scrollview.h  scrollview.rs  separator.c  separator.h  separator.rs  text-entry.c  text-entry.h  text.c  text.h  text.rs  ui.c  ui.h  uibox.rs  window.c  window.h  (+1 more)
src/ui/button/: lua.rs
src/ui/entry/: lua.rs
src/ui/font/: lua.rs
src/ui/grid/: lua.rs
src/ui/menu/: lua.rs
src/ui/scrollview/: lua.rs
src/ui/separator/: lua.rs
src/ui/text/: lua.rs
src/ui/uibox/: lua.rs
src/ui/window/: lua.rs
src/zip/: lua.rs
subprojects/: curl.wrap  glfw.wrap  serde-1-rs.wrap  serde_json-1-rs.wrap  windows-0.61-rs.wrap  xml-0.8-rs.wrap
subprojects/lua-5.4.6/: meson.build
subprojects/lua-5.4.6/src/: luaconf.h
subprojects/lua-5.4.7/: meson.build
subprojects/packagefiles/patches/serde_json/meson/: meson.build
subprojects/packagefiles/patches/windows-rs/meson/: meson.build
subprojects/sqlite-amalgamation-3460000/: meson.build
