extra_args += [
    '--cfg','feature="Win32"',
    '--cfg','feature="Win32_Media"',
    '--cfg','feature="Win32_Foundation"',
    '--cfg','feature="Win32_System"',
    '--cfg','feature="Win32_System_Diagnostics"',
    '--cfg','feature="Win32_System_Diagnostics_Debug"',
    '--cfg','feature="Win32_UI"',
    '--cfg','feature="Win32_UI_Input"',
    '--cfg','feature="Win32_UI_Input_KeyboardAndMouse"',
    '--cfg','feature="Win32_UI_WindowsAndMessaging"',
    '--cfg','feature="Win32_UI_Shell"',
    '--cfg','feature="Win32_UI_Shell_Common"',
    '--cfg','feature="Win32_Security"',
    '--cfg','feature="Win32_System"',
    '--cfg','feature="Win32_System_Com"',
    '--cfg','feature="Win32_System_Console"',
    '--cfg','feature="Win32_System_DataExchange"',
    '--cfg','feature="Win32_System_Environment"',
    '--cfg','feature="Win32_System_LibraryLoader"',
    '--cfg','feature="Win32_System_Memory"',
    '--cfg','feature="Win32_System_ProcessStatus"',
    '--cfg','feature="Win32_System_Registry"',
    '--cfg','feature="Win32_System_SystemInformation"',
    '--cfg','feature="Win32_System_Threading"',
    '--cfg','feature="Win32_System_Time"',
    '--cfg','feature="Win32_Graphics"',
    '--cfg','feature="Win32_Graphics_Gdi"',
    '--cfg','feature="Win32_Graphics_Direct3D"',
    '--cfg','feature="Win32_Graphics_Direct3D12"',
    '--cfg','feature="Win32_Graphics_Dxgi"',
    '--cfg','feature="Win32_Graphics_Dxgi_Common"',
    '--cfg','feature="Win32_Graphics_DirectComposition"',
    '--cfg','feature="Win32_Graphics_Imaging"',
    '--cfg','feature="Win32_Networking"',
    '--cfg','feature="Win32_Networking_WinInet"',
]
